syntax = "proto3";

package domain;

option java_package = "web.app.inventory";
option java_outer_classname = "InventoryDomainProto";

message ProductRequest {
  string product_id = 1;
}

message StockResponse {
  string product_id = 1;
  string product_name = 2;
  int32 available_stock = 3;
}

message UpdateStockRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message UpdateStockResponse {
  bool success = 1;
}

message InventoryListResponse {
  repeated Product products = 1;
}

message Product {
  string product_id = 1;
  string product_name = 2;
  int32 available_stock = 3;
}

message Empty {}
